# osint

./: .dockerignore  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml
app_skeleton/: .dockerignore  README.md  main.py  requirements.txt
artifacts/: chat.txt  design-note-v2.md  design-note.md  technical-deep-dive.md  working-principles.md
backend/: .gitignore  README.md  pyproject.toml
backend/chanakya/: __init__.py  edge_direction.py  ontology.py  settings.py  timeref.py
backend/chanakya/agent/: __init__.py  analyses.py  assemble.py  client.py  context.py  loop.py  propose.py  tool_specs.py  tools.py  validate.py
backend/chanakya/api/: __init__.py  app.py  quotes.py  spa.py  state.py
backend/chanakya/api/routes/: __init__.py  ask.py  config.py  coverage.py  deps.py  health.py  hitl.py  ingest.py  lookup.py  node.py  pending.py  view.py
backend/chanakya/config/: __init__.py  store.py
backend/chanakya/credibility/: __init__.py  independence.py  scoring.py  status.py  supersession.py
backend/chanakya/hitl/: __init__.py  controlpoints.py  queue.py  service.py  triage.py  writeback.py
backend/chanakya/ingest/: __init__.py  __main__.py  adapters.py  attribute.py  basing.py  client.py  coref.py  dedup.py  extract.py  hashing.py  imagery.py  lane.py  loaders.py  ocr_azure.py  renormalize.py  seed.py
backend/chanakya/materiality/: __init__.py  precompute.py
backend/chanakya/observe/: __init__.py  disposition.py  dsl.py  evaluator.py  observable.py
backend/chanakya/resolve/: __init__.py  aliases.py  anchor.py  cluster.py  entities.py  geo.py  normalize.py  places.py  propose.py  rconfig.py  scoring.py  succession.py
backend/chanakya/schemas/: __init__.py  api_models.py  base.py  claim.py  config_models.py  decision.py  ids.py  stage_io.py  values.py  view.py
backend/chanakya/store/: __init__.py  log.py
backend/chanakya/sufficiency/: __init__.py  checker.py
backend/chanakya/view/: __init__.py  coverage.py  export.py  lens.py  pipeline.py  supersede.py
backend/eval/: __init__.py  __main__.py  harness.py  report.py
backend/tests/: conftest.py  test_ontology.py
backend/tests/acceptance/: __init__.py  conftest.py  test_answer_key_separation.py  test_map_position_integrity.py  test_merge_candidate_provenance.py  test_per_type_automerge_corpus.py  test_plotted_point_provenance.py  test_relocation_beat.py  test_t3b_fragmentation_corpus.py  test_worked_query.py
backend/tests/agent/: conftest.py  fixtures.py  mock_llm.py  test_analyses.py  test_ask.py  test_battery.py  test_conversation_thread.py  test_fixture.py  test_live.py  test_loop.py  test_propose.py  test_subquestion_decomposition.py  test_tool_specs.py  test_tools.py  test_validate.py
backend/tests/api/: conftest.py  test_ask.py  test_boot.py  test_config.py  test_health.py  test_hitl.py  test_ingest.py  test_node_evidence.py  test_quotes.py  test_spa.py  test_view.py  test_withheld_seed.py
backend/tests/config/: test_config_store.py  test_entities_config.py  test_places_config.py
backend/tests/credibility/: builders.py  test_freshness_class_defaults.py  test_independence.py  test_integrity_and_hitl.py  test_scoring.py  test_status.py
backend/tests/fixtures/: __init__.py  loaders.py
backend/tests/fixtures/golden/: decision_log.json  evidence_log.json  expected_view.json
backend/tests/fixtures/golden/config/: credibility.yaml  observables.yaml  ontology.yaml  resolution.yaml  sources.yaml  subjects.yaml  templates.yaml
backend/tests/fixtures/per_stage/: alert_delta.json  known_gap.json  resolution_partition.json  status_cases.json
backend/tests/gates/: __init__.py  _determinism_subproc.py  _srcscan.py  test_g10_subject_as_lens.py  test_g11_generator_blind.py  test_g12_hitl_propagation.py  test_g1_rebuild_purity.py  test_g2_determinism.py  test_g3_append_only.py  test_g4_traceability.py  test_g5_two_scores.py  test_g6_no_magic_numbers.py  test_g7_confirmed_gate.py  test_g8_insufficient_first_class.py  test_g9_ingest_source_typed.py  test_g_materiality_filter_keys.py
backend/tests/hitl/: test_acceptance.py  test_cards.py  test_service.py  test_triage.py  test_writeback.py
backend/tests/ingest/: test_acceptance.py  test_adapters.py  test_attribute.py  test_basing.py  test_client.py  test_coref.py  test_dedup.py  test_edge_direction.py  test_extract.py  test_hashing.py  test_imagery.py  test_lane.py  test_loaders.py  test_observation_dating.py  test_occupancy_lane.py  test_ocr_azure.py  test_pdf_multimodal.py  test_phase2_relane.py  test_renormalize.py  test_review_fixes.py  test_seed.py
backend/tests/materiality/: test_chokepoints.py
backend/tests/observe/: conftest.py  test_alert_provenance.py  test_alert_shape.py  test_conditions_and_unconsumed.py  test_disposition.py  test_dsl.py  test_evaluator.py  test_geo_seam.py  test_match_on_grouping.py  test_secondaries.py
backend/tests/resolve/: __init__.py  _helpers.py  test_anchor.py  test_attr_history.py  test_attribute_roles.py  test_bridge_across_wall.py  test_coref_honor.py  test_critical_veto_credibility.py  test_entity_resolution.py  test_geo_conflict.py  test_hitl_learning_loop.py  test_identity_coverage.py  test_merge_ledger.py  test_per_type_automerge.py  test_places.py  test_possible_tier.py  test_propose.py  test_relational_weighting.py  test_review_regressions.py  test_succession.py  test_t3b_fragmentation.py  test_time_aware_conflict.py  test_trajectory_support.py  test_transition_witness.py
backend/tests/schemas/: test_schemas.py
backend/tests/store/: test_store.py
backend/tests/sufficiency/: test_check.py
backend/tests/view/: test_export.py  test_lens.py  test_lens_ar2_ar3.py  test_location_precision.py  test_merge_ledger_view.py  test_rebuild.py  test_resolution_edges.py  test_stages_smoke.py  test_supersede.py  test_temporal_validity.py
config/: credibility.yaml  entities.yaml  observables.yaml  ontology.yaml  places.yaml  resolution.yaml  sources.yaml  subjects.yaml  templates.yaml
deploy/: README.md  bootstrap-ec2.sh  chanakya-cli.py  prove-live.sh  verify.sh
(+354 files in other folders)
