[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chanakya"
version = "0.1.0"
description = "Chanakya OSINT — shared spine + C-layer backend (Sarvam take-home)"
requires-python = ">=3.12"
# Full locked dependency set (master plan §4.1). The stack is DECIDED (md/07-stack),
# so this is knowable up front; Wave-1 sessions never edit this file (§2 Rule 1).
dependencies = [
    "pydantic>=2.6,<3",
    "networkx>=3.2,<4",
    "anthropic>=0.39",
    "fastapi>=0.110,<1",
    "uvicorn>=0.27,<1",
    "pyyaml>=6.0,<7",
    "python-dateutil>=2.9,<3",
    "rapidfuzz>=3.6,<4",
    "rank-bm25>=0.2.2,<0.3",
    "geopy>=2.4,<3",
    # INGEST imagery integrity (two-hash + EXIF): sha256 is stdlib; PDQ/pHash need these. Core so the
    # recycled-image flex + seed-bundle hashes work on every build (keyless boot reads frozen hashes).
    "pillow>=10",
    "numpy>=1.26,<3",
    "pdqhash>=0.2",
    # INGEST coordinate-grid parsing (Location adapter): the corpus *states* MGRS (d17 "43S CT…" → Nur
    # Khan) + UTM, so these are demo-exercised, not truly optional — core so CI installs + tests them.
    # Small + pure-Python; the adapter still degrades gracefully to a raw Location if ever omitted.
    "mgrs>=1.5",
    "utm>=0.7",
    # INGEST PDF handling: pymupdf extracts the text layer AND renders every page to an image for the
    # one multimodal extract call (Azure OCR is the optional keyed upgrade for scanned/table-rich PDFs).
    # NB licence: pymupdf is AGPL-3.0 — fine for this hosted take-home (not distributed as a product);
    # flagged in the design note. Permissive alt = pdfminer.six + pypdf, at the cost of one-lib rendering.
    "pymupdf>=1.24",
]

[project.optional-dependencies]
# Optional 2nd extraction provider (INGEST). Keyless boot never needs it (master §7).
gemini = ["google-genai>=0.3"]
# Optional rich-PDF OCR provider (INGEST, Azure Document Intelligence). Born-digital PDFs use poppler
# and need none of this; the transform is SDK-free (fixture-tested). Keyless boot never needs it.
ocr = ["azure-ai-documentintelligence>=1.0,<2"]
# Dev + test toolchain (master §6). Installed in CI.
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=4.1",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "httpx>=0.27,<1",
    "respx>=0.21,<1",
    "types-python-dateutil",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chanakya*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["."]

[tool.ruff.lint]
# Conservative, high-signal rule set; not a style crusade (principle 7: defensible, not clever).
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "E501",   # line length handled by formatter; some tables/URLs run long
    "B008",   # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
packages = ["chanakya"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# Pragmatic strictness: enforce annotations on our code, tolerate untyped 3rd-party libs.
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Tests carry fixtures/monkeypatches where full typing adds noise, not safety.
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: exercises a real external API (needs a key); skipped by default in CI",
]
addopts = "-q"
